// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionalWrapper should apply wrapper when condition is true 1`] = `
<View
  style={
    {
      "backgroundColor": "#000000",
    }
  }
>
  <Text>
    test
  </Text>
</View>
`;

exports[`ConditionalWrapper should not apply wrapper when condition is false 1`] = `
<Text>
  test
</Text>
`;
